Improved logic for detecting MODIFY action profile